--- a/roles/mac/tasks/main.yml
+++ b/roles/mac/tasks/main.yml
@@ -1,21 +1,33 @@
+# Cribbed from https://github.com/adamchainz/mac-ansible/blob/master/roles/adam_mac/tasks/installs.yml
+
 - name: Update homebrew
   homebrew:
     name:
     - ack
+    - bazel
+    - cmake
     - fish
     - git
+    - go
+    - graphviz
     - hledger
     - hping
     - htop
+    - lsof
     - jq
     - mercurial
     - mtr
+    - ncdu
     - nmap
     - pstree
     - rclone
+    - sloccount
+    - sqlite
     - tcping
     - tig
     - tmux
+    - tree
+    - watch
     - wget
     state: latest
     update_homebrew: true
@@ -25,9 +37,18 @@
   homebrew_cask:
     name: '{{ item }}'
     state: installed
+    # Some of these apps were installed outside cask. Don't error for these.
+    accept_external_apps: true
   loop:
+    - disk-inventory-x
+    - dash
+    - docker
+    - firefox
+    - iterm2
+    # - java
     - vlc
     - gimp
+    - steam
     - transmission
   
 - name: Update homebrew casks
@@ -56,6 +77,8 @@
     - pms5003
     - prometheus-client
     - pytest
+    - pyyaml
     - requests
     - sense-hat
     - simplejson
+    - wheel
