--- a/roles/mac/tasks/main.yml
+++ b/roles/mac/tasks/main.yml
@@ -1,63 +1,8 @@
 # Cribbed from https://github.com/adamchainz/mac-ansible/blob/master/roles/adam_mac/tasks/installs.yml
-
-- name: Update homebrew
-  homebrew:
-    name:
-    - ack
-    - bazel
-    - cmake
-    - fish
-    - git
-    - go
-    - graphviz
-    - hledger
-    - hping
-    - htop
-    - lsof
-    - jq
-    - mercurial
-    - mtr
-    - ncdu
-    - nmap
-    - node
-    - pstree
-    - rclone
-    - sloccount
-    - sqlite
-    - tcping
-    - tig
-    - tmux
-    - tree
-    - watch
-    - wget
-    state: latest
-    update_homebrew: true
-    upgrade_all: true
-    
-- name: Install homebrew cask packages
-  homebrew_cask:
-    name: '{{ item }}'
-    state: installed
-    # Some of these apps were installed outside cask. Don't error for these.
-    accept_external_apps: true
-  loop:
-    - disk-inventory-x
-    - dash
-    - docker
-    - firefox
-    - iterm2
-    # - java
-    - vlc
-    - gimp
-    - steam
-    - transmission
-  
-- name: Update homebrew casks
-  homebrew_cask:
-    upgrade_all: true
-
-- name: homebrew cleanup
-  command: brew cleanup
+- name: install brew packages
+  import_tasks: brew.yml
+  tags:
+  - brew
 
 - name: install pip packages
   import_tasks: pip.yml
