--- a/roles/mac/tasks/pip.yml
+++ b/roles/mac/tasks/pip.yml
@@ -7,8 +7,10 @@
     - fava
     - Flask
     - ipython
+    - jinja2
     - jupyter
     - matplotlib
+    - mypy
     - numpy
     - oauth2
     - pandas
